--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
 body {
-    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+    font-family: Roboto, sans-serif;    
     margin: 0;
     min-height: 100vh;
   }
 
 .header {
-    font-family: Roboto, sans-serif;
     background: #1f2937;
+    display: flex;
 }
 
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+}
+
+a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
 }
