--- a/style.css
+++ b/style.css
@@ -5,13 +5,34 @@ body {
   }
 
 .header {
-    background: #1f2937;
     display: flex;
 }
 
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
+}
+
+.hero, footer, .header {
+    background: #1F2937;
+}
+
+.heroMain {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+}
+
+.hero2nd {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+button {
+    background-color: #3882F6;
+    color:#f9faf8;
+    font-size: 18px;
+    font-weight: 900;
 }
 
 ul {
