--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body {
     font-family: Roboto, sans-serif;    
     margin: 0;
+    padding: 0;
     min-height: 100vh;
   }
+
+.container {
+    display: flex;
+    flex-direction: column;
+}  
 
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-logo {
