--- a/style.css
+++ b/style.css
@@ -57,6 +57,32 @@ body {
     background: #3882F6;
 }
 
+.information {
+    align-items: center;
+    text-align: center;
+}
+
+.infoHeader {
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: 900;
+    padding: 32px;
+}
+
+.infoBlocks {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.infoBlocks img {
+    width: 200px;
+    height: 200px;
+    border-radius: 16px;
+    border: 4px solid #3882F6;
+}
+
 button {
     background-color: #3882F6;
     color:#f9faf8;
