--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
 .information {
     align-items: center;
     text-align: center;
+    padding: 16px 16px 64px 16px;
 }
 
 .infoHeader {
@@ -82,6 +83,27 @@ body {
     height: 200px;
     border-radius: 16px;
     border: 4px solid #3882F6;
+}
+
+.quoteSection {
+    background-color: #e5e7eb;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 128px 384px;
+}
+
+.quoteSection p {
+    font-size: 36px;
+    font-weight: lighter;
+    color:#1F2937;
+    font-style: italic;
+}
+
+.signature {
+    font-weight: bold;
+    color:#1F2937;
+    text-align: right;
 }
 
 button {
@@ -109,4 +131,12 @@ a {
 
 li {
     padding: 24px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#f9faf8;
+    padding: 32px;
 }
